--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ anyhow = "1.0.31"
 serde = { version = "1.0", features = ["derive"] }
 ansi_term = "0.12.1"
 serde_json = "1.0.55"
+regex = "1.3.9"
+rpassword = "4.0.5"
