--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 description = "Leetcode cli"
 
 [dependencies]
+cache = { path = "./cache" }
 clap = "2.33.1"
-html5ever = "0.25.1"
 structopt = "0.3.15"
-reqwest = { version = "0.10.6", features = ["blocking", "json"] }
+reqwest = { version = "0.10.6", features = ["blocking", "json", "cookies"] }
 thiserror = "1.0.20"
 anyhow = "1.0.31"
 serde = { version = "1.0", features = ["derive"] }
@@ -17,3 +17,4 @@ ansi_term = "0.12.1"
 serde_json = "1.0.55"
 regex = "1.3.9"
 rpassword = "4.0.5"
+url = "2.1.1"
