--- a/request/Cargo.toml
+++ b/request/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 curl = "0.4.30"
 bytes = "0.5.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
