--- a/request/Cargo.toml
+++ b/request/Cargo.toml
@@ -12,3 +12,5 @@ bytes = "0.5.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.3.9"
+log = "0.4.11"
+env_logger = "0.8.1"
