--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ description = "Leetcode cli"
 cache = { path = "./cache" }
 clap = "2.33.1"
 structopt = "0.3.15"
-request = { path = "./request" }
 thiserror = "1.0.20"
 anyhow = "1.0.31"
 serde = { version = "1.0", features = ["derive"] }
@@ -19,8 +18,9 @@ regex = "1.3.9"
 rpassword = "4.0.5"
 url = "2.1.1"
 curl = "0.4.30"
-cookie = "0.14.1"
+cookie = "0.14.2"
 colci = "0.1.0"
 log = "0.4.11"
 env_logger = "0.8.1"
 html2text = "0.2.1"
+reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
