--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ description = "Leetcode cli"
 cache = { path = "./cache" }
 clap = "2.33.1"
 structopt = "0.3.15"
-request = { path = "./request" }
 thiserror = "1.0.20"
 anyhow = "1.0.31"
 serde = { version = "1.0", features = ["derive"] }
@@ -24,3 +23,4 @@ colci = "0.1.0"
 log = "0.4.11"
 env_logger = "0.8.1"
 html2text = "0.2.1"
+reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
