--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ log = "0.4.11"
 env_logger = "0.8.1"
 html2text = "0.2.1"
 reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
+spinners = "1.2.0"
