--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["dragfire <asem.devajit@gmail.com>"]
 edition = "2018"
 description = "Leetcode cli"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+homepage = "https://github.com/dragfire/leetup"
+repository = "https://github.com/dragfire/leetup"
+keywords = ["cli", "leetcode"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 cache = { path = "./cache" }
