--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ env_logger = "0.8.1"
 html2text = "0.2.1"
 reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
+dirs = "3.0.1"
