--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,10 +4,6 @@ on:
   push:
     tags:
       - '*'
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
 env:
   CARGO_TERM_COLOR: always
 
@@ -20,16 +16,17 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup-linux-amd64
+            asset_name: leetup${{ github.event.release.tag_name }}-linux-amd64.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup-windows-amd64
+            asset_name: leetup${{ github.event.release.tag_name }}-windows-amd64.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup-macos-amd64
-
+            asset_name: leetup${{ github.event.release.tag_name }}-macos-amd64.sh
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build
       run: cargo build --release
     - name: Upload binaries to release
