--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,17 +16,19 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup${{ github.event.release.tag_name }}-linux-amd64.sh
+            asset_name: leetup${{ env.RELEASE_VERSION }}-linux-amd64.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup${{ github.event.release.tag_name }}-windows-amd64.exe
+            asset_name: leetup${{ env.RELEASE_VERSION }}-windows-amd64.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup${{ github.event.release.tag_name }}-macos-amd64.sh
+            asset_name: leetup${{ env.RELEASE_VERSION }}-macos-amd64.sh
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build
       run: cargo build --release
     - name: Upload binaries to release
