--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,19 +16,20 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup${{ env.RELEASE_VERSION }}-linux-amd64.sh
+            asset_name: leetup${{ steps.vars.outputs.tag }}-linux-amd64.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup${{ env.RELEASE_VERSION }}-windows-amd64.exe
+            asset_name: leetup${{ steps.vars.outputs.tag }}-windows-amd64.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup${{ env.RELEASE_VERSION }}-macos-amd64.sh
+            asset_name: leetup${{ steps.vars.outputs.tag }}-macos-amd64.sh
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Set Tag
+      id: vars
+      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
     - name: Build
       run: cargo build --release
     - name: Upload binaries to release
