--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,13 +16,13 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup${{ steps.vars.outputs.tag }}-linux-amd64.sh
+            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-linux-amd64.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup${{ steps.vars.outputs.tag }}-windows-amd64.exe
+            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-windows-amd64.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup${{ steps.vars.outputs.tag }}-macos-amd64.sh
+            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-macos-amd64
     steps:
     - uses: actions/checkout@v2
       with:
