--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,11 +4,16 @@ on:
   push:
     tags:
       - '*'
+    branches:
+      - main
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   publish:
+    name: Set Tag
+      id: vars
+      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
     name: Publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -16,20 +21,17 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-linux-amd64.sh
+            asset_name: leetup${{ publish.vars.outputs.tag }}-linux-amd64.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-windows-amd64.exe
+            asset_name: leetup${{ publish.vars.outputs.tag }}-windows-amd64.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup${{ jobs.steps.vars.outputs.tag }}-macos-amd64
+            asset_name: leetup${{ publish.vars.outputs.tag }}-macos-amd64
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Set Tag
-      id: vars
-      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
     - name: Build
       run: cargo build --release
     - name: Upload binaries to release
