--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,8 +4,9 @@ on:
   push:
     tags:
       - '*'
-    branches:
-      - main
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 env:
   CARGO_TERM_COLOR: always
 
