--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - '*'
-    branches: [ master ]
 env:
   CARGO_TERM_COLOR: always
 
@@ -17,25 +16,23 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup-linux-amd64
+            asset_name: leetup${{ tag }}-linux.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup-windows-amd64
+            asset_name: leetup${{ tag }}.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup-macos-amd64
+            asset_name: leetup${{ tag }}-macos.sh
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
     - name: Build
       run: cargo build --release
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: target/release/${{ matrix.artifact_name }}
-        asset_name: ${{ matrix.asset_name }}-${{ env.RELEASE_VERSION }}
+        asset_name: ${{ matrix.asset_name }}
         tag: ${{ github.ref }}
