--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,13 +16,13 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: leetup
-            asset_name: leetup${{ $tag }}-linux.sh
+            asset_name: leetup-linux.sh
           - os: windows-latest
             artifact_name: leetup.exe
-            asset_name: leetup${{ $tag }}.exe
+            asset_name: leetup.exe
           - os: macos-latest
             artifact_name: leetup
-            asset_name: leetup${{ $tag }}-macos.sh
+            asset_name: leetup-macos.sh
     steps:
     - uses: actions/checkout@v2
       with:
@@ -36,3 +36,4 @@ jobs:
         file: target/release/${{ matrix.artifact_name }}
         asset_name: ${{ matrix.asset_name }}
         tag: ${{ github.ref }}
+        overwrite: true
