--- a/.travis.yml
+++ b/.travis.yml
@@ -23,25 +23,13 @@ matrix:
     - env: TARGET=x86_64-apple-darwin
       os: osx
 
-    # *BSD
-    # - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
-    # - env: TARGET=x86_64-unknown-freebsd DISABLE_TESTS=1
-    # - env: TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1
-
     # Windows
     - env: TARGET=x86_64-pc-windows-gnu
-
-    # Testing other channels
-    # - env: TARGET=x86_64-unknown-linux-gnu
-    #   rust: nightly
-    # - env: TARGET=x86_64-apple-darwin
-    #   os: osx
-    #   rust: nightly
 
 before_install:
   - set -e
   - rustup self update
-  - sudo apt-get -y install libssl-dev pkg-config
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -y install libssl-dev pkg-config ; fi
 
 install:
   - sh ci/install.sh
