--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
 before_install:
   - set -e
   - rustup self update
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt -y install libssl-dev pkg-config ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt -y install pkg-config libssl-dev ; fi
 
 install:
   - sh ci/install.sh
