--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,9 @@ html2text = "0.2.1"
 reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
 dirs = "3.0.1"
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
+
+[target.x86_64-unknown-linux-musl.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
