--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ test_script:
     )
 
 before_deploy:
-  - cargo rustc --target %TARGET% --release --bin %CRATE_NAME% -- -C lto
+  - cargo rustc --target %TARGET% --release --bin %CRATE_NAME%
   - ps: ci\before_deploy.ps1
 
 deploy:
