--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ spinners = "1.2.0"
 dirs = "3.0.1"
 predicates = "1.0.5"
 assert_cmd = "1.0.1"
+tempfile = "3.1.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
