--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,11 @@ html2text = "0.2.1"
 reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
 dirs = "3.0.1"
+
+[dev-dependencies]
+tempfile = "3.1.0"
 predicates = "1.0.5"
 assert_cmd = "1.0.1"
-tempfile = "3.1.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
