--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ html2text = "0.2.1"
 reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
 dirs = "3.0.1"
+serde_repr = "0.1.6"
 
 [dev-dependencies]
 tempfile = "3.1.0"
