--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leetup"
-version = "0.1.15"
+version = "0.1.16"
 authors = ["dragfire <asem.devajit@gmail.com>"]
 edition = "2018"
 description = "Leetcode cli"
@@ -33,6 +33,7 @@ reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
 dirs = "3.0.1"
 serde_repr = "0.1.6"
+shellexpand = "2.0.0"
 
 [dev-dependencies]
 tempfile = "3.1.0"
