--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,13 @@ colci = "0.1.0"
 log = "0.4.11"
 env_logger = "0.8.1"
 html2text = "0.2.1"
-reqwest = { version = "0.10.8", features = [ "blocking", "json", "cookies"] }
 spinners = "1.2.0"
 dirs = "3.0.1"
 serde_repr = "0.1.6"
 shellexpand = "2.0.0"
+reqwest = { version = "0.11", features = ["json", "cookies"] }
+tokio = { version = "1", features = ["full"] }
+async-trait = "0.1.52"
 
 [dev-dependencies]
 tempfile = "3.1.0"
