--- a/.github/workflows/mean_bean_deploy.yml
+++ b/.github/workflows/mean_bean_deploy.yml
@@ -6,8 +6,7 @@ on:
 
 name: Mean Bean Deploy
 env:
-  # TODO: Rename to your binary
-  BIN: <MY_BIN_NAME>
+  BIN: leetup
 
 jobs:
   # This job downloads and stores `cross` as an artifact, so that it can be
