--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ homepage = "https://github.com/dragfire/leetup"
 repository = "https://github.com/dragfire/leetup"
 keywords = ["cli", "leetcode"]
 categories = ["command-line-utilities"]
+exclude = [
+  "assets/*"
+]
 
 [dependencies]
 leetup-cache = { path = "./cache", version = "0.1.0"}
