--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leetup"
-version = "1.2.5"
+version = "1.2.6"
 authors = ["dragfire <asem.devajit@gmail.com>"]
 edition = "2018"
 description = "Leetcode cli"
@@ -15,7 +15,7 @@ exclude = [
 ]
 
 [dependencies]
-leetup-cache = { path = "./cache", version = "0.1.0"}
+leetup-cache = { path = "./cache" }
 clap = "4.4.2"
 structopt = "0.3.15"
 thiserror = "1.0.20"
