--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ exclude = [
 ]
 
 [dependencies]
-leetup-cache = { path = "./cache" }
+leetup-cache = { path = "./cache", version = "0.1.1" }
 clap = "4.4.2"
 structopt = "0.3.15"
 thiserror = "1.0.20"
